@@ -1,58 +1,55 @@
 package xyz.oribuin.skyhoppers.task;
 
-import xyz.oribuin.skyhoppers.SkyHoppersPlugin;
-import xyz.oribuin.skyhoppers.manager.DataManager;
-import xyz.oribuin.skyhoppers.obj.SkyHopper;
+import dev.rosewood.rosegarden.RosePlugin;
 import org.bukkit.Material;
 import org.bukkit.block.Furnace;
-import org.bukkit.block.Hopper;
 import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.scheduler.BukkitRunnable;
-import xyz.oribuin.gui.Item;
+import xyz.oribuin.skyhoppers.manager.ConfigurationManager.Settings;
+import xyz.oribuin.skyhoppers.manager.HopperManager;
+import xyz.oribuin.skyhoppers.obj.SkyHopper;
+import xyz.oribuin.skyhoppers.util.ItemMaker;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class ItemTransferTask extends BukkitRunnable {
 
-    private final DataManager data;
-    private int itemsPerTransfer = 2;
+    private final HopperManager manager;
+    private final int itemsPerTransfer;
 
-    public ItemTransferTask(final SkyHoppersPlugin plugin) {
-        this.data = plugin.getManager(DataManager.class);
-        if (plugin.getConfig().get("items-per-transfer") != null)
-            this.itemsPerTransfer = plugin.getConfig().getInt("items-per-transfer");
+    public ItemTransferTask(final RosePlugin plugin) {
+        this.manager = plugin.getManager(HopperManager.class);
+        this.itemsPerTransfer = Settings.TASKS_ITEMS_PER_TRANSFER.getInt();
     }
 
     @Override
     public void run() {
-        this.data.getCachedHoppers().forEach((location, hopper) -> {
-            if (hopper.getLinked() == null || hopper.getLocation() == null)
+
+        for (SkyHopper skyHopper : this.manager.getEnabledHoppers()) {
+            if (skyHopper == null || skyHopper.getLocation() == null || skyHopper.getLinked() == null)
                 return;
 
-            if (!(hopper.getLocation().getBlock().getState() instanceof Hopper block))
+            if (!(skyHopper.getLocation().getBlock().getState() instanceof org.bukkit.block.Hopper hopperBlock))
                 return;
 
-            // Don't transfer items if the container is locked.
-            if (block.isLocked())
+            if (hopperBlock.isLocked())
                 return;
 
-            if (!SkyHopper.validContainers().contains(hopper.getLinked().getType()))
-                return;
+            final Inventory hopperInventory = hopperBlock.getInventory();
+            final Inventory linkedInventory = skyHopper.getLinked().getInventory();
 
-            final Inventory hopperInventory = block.getInventory();
             final List<ItemStack> hopperItems = Arrays.stream(hopperInventory.getContents())
                     .filter(Objects::nonNull)
-                    .filter(itemStack -> itemStack.getType() != Material.AIR)
-                    .collect(Collectors.toList());
+                    .filter(item -> item.getType() != Material.AIR)
+                    .toList();
 
-            final Inventory linkedInventory = hopper.getLinked().getInventory();
 
             hopperItems.stream().findFirst().ifPresent(itemStack -> this.transferToNormalInv(itemStack, linkedInventory));
-        });
+        }
+
     }
 
     /**
@@ -78,7 +75,7 @@ public class ItemTransferTask extends BukkitRunnable {
 
             // slot is empty, fill it with the whole itemstack
             if (containerItem == null || containerItem.getType() == Material.AIR) {
-                inv.setItem(i, new Item.Builder(toTransfer.clone()).setAmount(transferAmount).create());
+                inv.setItem(i, new ItemMaker(toTransfer.clone()).setAmount(transferAmount).create());
                 toTransfer.setAmount(toTransfer.getAmount() - transferAmount);
 
                 return;
@@ -97,15 +94,7 @@ public class ItemTransferTask extends BukkitRunnable {
             }
 
         }
+
     }
+
 }
-
-// never uncomment this, It is such a bad idea
-// It increases the server's overall cpu usage by 600% and increases ram usage just low enough to not crash
-// your operating system.
-
-// Yes I am keeping this in here.
-//            hopperItems.forEach(itemStack -> {
-//                final InventoryMoveItemEvent itemEvent = new InventoryMoveItemEvent(hopperInventory, itemStack, hopper.getLinked().getInventory(), true);
-//                Bukkit.getPluginManager().callEvent(itemEvent);
-//            });
